[package]
name = "rolling-crushers"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Attr",
                "Document",
                "Element",
                "Event",
                "KeyboardEvent",
                "EventTarget",
                "HtmlCanvasElement",
                "WebGlRenderingContext",
                "WebGlBuffer",
                "WebGlProgram",
                "WebGlShader",
                "Window"]