[package]
name = "rolling-crushers"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasmuri-core = { git = "https://github.com/knokko/wasmuri-core" }
wasmuri-text = { git = "https://github.com/knokko/wasmuri-text" }
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "0.3"
features = ["Attr",
                "Document",
                "Element",
                "Event",
                "KeyboardEvent",
                "EventTarget",
                "HtmlCanvasElement",
                "WebGlRenderingContext",
                "WebGlBuffer",
                "WebGlProgram",
                "WebGlShader",
                "Window"]