[package]
name = "rolling-crushers"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasmuri-components = { path = "../../libraries/wasmuri/components" }
wasmuri-container = { path = "../../libraries/wasmuri/container" }
wasmuri-core = { path = "../../libraries/wasmuri/core" }
wasmuri-text = { path = "../../libraries/wasmuri/text" }
wasmuri-events = { path = "../../libraries/wasmuri/events" }
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "0.3"
features = ["Attr",
                "Document",
                "Element",
                "Event",
                "KeyboardEvent",
                "EventTarget",
                "HtmlCanvasElement",
                "WebGlRenderingContext",
                "WebGlBuffer",
                "WebGlProgram",
                "WebGlShader",
                "Window"]